[package]
name = "mpl-account-compression"
version = "0.4.1"
description = "Metaplex Fork of Solana Program Library Account Compression Program"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-account-compression"
license-file = "../../LICENSE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0" }
bytemuck = "1.13"
mpl-noop = { version = "0.2.0", path = "../noop", features = ["no-entrypoint"] }
solana-program = ">=1.18.11,<=2"
spl-concurrent-merkle-tree = { version = "0.4.0" }

[profile.release]
overflow-checks = true
