[package]
name = "mpl-noop"
version = "0.2.1"
description = "Metaplex Fork of Solana Program Library No-op Program"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-account-compression"
license-file = "../../LICENSE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = ">=1.18.11, <=2"
